--- a/spec/unitformat.html
+++ b/spec/unitformat.html
@@ -42,6 +42,436 @@
 
     </emu-clause>
 
+
+    <emu-table id="table-unit-types">
+     <emu-caption>List of unit types</emu-caption>
+     <table class="real-table">
+       <thead>
+         <tr>
+           <th>Type</th>
+           <th>Unit</th>
+         </tr>
+       </thead>
+       <tr>
+         <td rowspan="11">duration</td>
+         <td>century</td>
+       </tr>
+       <tr>
+         <td>year</td>
+       </tr>
+       <tr>
+         <td>month</td>
+       </tr>
+       <tr>
+         <td>week</td>
+       </tr>
+       <tr>
+         <td>day</td>
+       </tr>
+       <tr>
+         <td>hour</td>
+       </tr>
+       <tr>
+         <td>minute</td>
+       </tr>
+       <tr>
+         <td>second</td>
+       </tr>
+       <tr>
+         <td>millisecond</td>
+       </tr>
+       <tr>
+         <td>microsecond</td>
+       </tr>
+       <tr>
+         <td>nanosecond</td>
+       </tr>
+       <tr>
+         <td rowspan="19">length</td>
+         <td>kilometer</td>
+       </tr>
+       <tr>
+         <td>meter</td>
+       </tr>
+       <tr>
+         <td>decimeter</td>
+       </tr>
+       <tr>
+         <td>centimeter</td>
+       </tr>
+       <tr>
+         <td>milimeter</td>
+       </tr>
+       <tr>
+         <td>micrometer</td>
+       </tr>
+       <tr>
+         <td>nanometer</td>
+       </tr>
+       <tr>
+         <td>picometer</td>
+       </tr>
+       <tr>
+         <td>mile</td>
+       </tr>
+       <tr>
+         <td>yard</td>
+       </tr>
+       <tr>
+         <td>foot</td>
+       </tr>
+       <tr>
+         <td>inch</td>
+       </tr>
+       <tr>
+         <td>parsec</td>
+       </tr>
+       <tr>
+         <td>light-year</td>
+       </tr>
+       <tr>
+         <td>astronomical-unit</td>
+       </tr>
+       <tr>
+         <td>furlong</td>
+       </tr>
+       <tr>
+         <td>fathom</td>
+       </tr>
+       <tr>
+         <td>nautical-mile</td>
+       </tr>
+       <tr>
+         <td>mile-scandinavian</td>
+       </tr>
+       <tr>
+         <td rowspan="9">area</td>
+         <td>square-kilometer</td>
+       </tr>
+       <tr>
+         <td>hectare</td>
+       </tr>
+       <tr>
+         <td>square-meter</td>
+       </tr>
+       <tr>
+         <td>square-centimeter</td>
+       </tr>
+       <tr>
+         <td>square-mile</td>
+       </tr>
+       <tr>
+         <td>acre</td>
+       </tr>
+       <tr>
+         <td>square-yard</td>
+       </tr>
+       <tr>
+         <td>square-foot</td>
+       </tr>
+       <tr>
+         <td>square-inch</td>
+       </tr>
+       <tr>
+         <td rowspan="25">volume</td>
+         <td>cubic-kilometer</td>
+       </tr>
+       <tr>
+         <td>cubic-meter</td>
+       </tr>
+       <tr>
+         <td>cubic-centimeter</td>
+       </tr>
+       <tr>
+         <td>cubic-mile</td>
+       </tr>
+       <tr>
+         <td>cubic-yard</td>
+       </tr>
+       <tr>
+         <td>cubic-foot</td>
+       </tr>
+       <tr>
+         <td>cubic-inch</td>
+       </tr>
+       <tr>
+         <td>megaliter</td>
+       </tr>
+       <tr>
+         <td>hectoliter</td>
+       </tr>
+       <tr>
+         <td>liter</td>
+       </tr>
+       <tr>
+         <td>deciliter</td>
+       </tr>
+       <tr>
+         <td>centiliter</td>
+       </tr>
+       <tr>
+         <td>milliliter</td>
+       </tr>
+       <tr>
+         <td>pint-metric</td>
+       </tr>
+       <tr>
+         <td>cup-metric</td>
+       </tr>
+       <tr>
+         <td>acre-foot</td>
+       </tr>
+       <tr>
+         <td>bushel</td>
+       </tr>
+       <tr>
+         <td>gallon</td>
+       </tr>
+       <tr>
+         <td>gallon-imperial</td>
+       </tr>
+       <tr>
+         <td>quart</td>
+       </tr>
+       <tr>
+         <td>pint</td>
+       </tr>
+       <tr>
+         <td>cup</td>
+       </tr>
+       <tr>
+         <td>fluid-ounce</td>
+       </tr>
+       <tr>
+         <td>tablespoon</td>
+       </tr>
+       <tr>
+         <td>teaspoon</td>
+       </tr>
+       <tr>
+         <td rowspan="6">speed-and-acceleration</td>
+         <td>g-force</td>
+       </tr>
+       <tr>
+         <td>meter-per-second-squared</td>
+       </tr>
+       <tr>
+         <td>kilometer-per-hour</td>
+       </tr>
+       <tr>
+         <td>meter-per-second</td>
+       </tr>
+       <tr>
+         <td>mile-per-hour</td>
+       </tr>
+       <tr>
+         <td>knot</td>
+       </tr>
+       <tr>
+         <td rowspan="11">mass-and-weight</td>
+         <td>metric-ton</td>
+       </tr>
+       <tr>
+         <td>kilogram</td>
+       </tr>
+       <tr>
+         <td>gram</td>
+       </tr>
+       <tr>
+         <td>milligram</td>
+       </tr>
+       <tr>
+         <td>microgram</td>
+       </tr>
+       <tr>
+         <td>ton</td>
+       </tr>
+       <tr>
+         <td>stone</td>
+       </tr>
+       <tr>
+         <td>pound</td>
+       </tr>
+       <tr>
+         <td>ounce</td>
+       </tr>
+       <tr>
+         <td>ounce-troy</td>
+       </tr>
+       <tr>
+         <td>carat</td>
+       </tr>
+       <tr>
+         <td rowspan="12">energy-and-power</td>
+         <td>kilocalorie</td>
+       </tr>
+       <tr>
+         <td>calorie</td>
+       </tr>
+       <tr>
+         <td>foodcalorie</td>
+       </tr>
+       <tr>
+         <td>kilojoule</td>
+       </tr>
+       <tr>
+         <td>joule</td>
+       </tr>
+       <tr>
+         <td>kilowatt-hour</td>
+       </tr>
+       <tr>
+         <td>gigawatt</td>
+       </tr>
+       <tr>
+         <td>megawatt</td>
+       </tr>
+       <tr>
+         <td>kilowatt</td>
+       </tr>
+       <tr>
+         <td>watt</td>
+       </tr>
+       <tr>
+         <td>milliwatt</td>
+       </tr>
+       <tr>
+         <td>horsepower</td>
+       </tr>
+       <tr>
+         <td rowspan="7">electrical-and-frequency</td>
+         <td>ampere</td>
+       </tr>
+       <tr>
+         <td>milliampere</td>
+       </tr>
+       <tr>
+         <td>ohm</td>
+       </tr>
+       <tr>
+         <td>volt</td>
+       </tr>
+       <tr>
+         <td>gigahertz</td>
+       </tr>
+       <tr>
+         <td>megahertz</td>
+       </tr>
+       <tr>
+         <td>kilohertz</td>
+       </tr>
+       <tr>
+         <td rowspan="8">weather</td>
+         <td>hectopascal</td>
+       </tr>
+       <tr>
+         <td>millimeter-of-mercury</td>
+       </tr>
+       <tr>
+         <td>pound-per-square-inch</td>
+       </tr>
+       <tr>
+         <td>inch-hg</td>
+       </tr>
+       <tr>
+         <td>millibar</td>
+       </tr>
+       <tr>
+         <td>generic</td>
+       </tr>
+       <tr>
+         <td>celsius</td>
+       </tr>
+       <tr>
+         <td>fahrenheit</td>
+       </tr>
+       <tr>
+         <td rowspan="11">weather</td>
+         <td>kelvin</td>
+       </tr>
+       <tr>
+         <td>terabyte</td>
+       </tr>
+       <tr>
+         <td>terabit</td>
+       </tr>
+       <tr>
+         <td>gigabyte</td>
+       </tr>
+       <tr>
+         <td>gigabit</td>
+       </tr>
+       <tr>
+         <td>megabyte</td>
+       </tr>
+       <tr>
+         <td>megabit</td>
+       </tr>
+       <tr>
+         <td>kilobyte</td>
+       </tr>
+       <tr>
+         <td>kilobit</td>
+       </tr>
+       <tr>
+         <td>byte</td>
+       </tr>
+       <tr>
+         <td>bit</td>
+       </tr>
+       <tr>
+         <td rowspan="4">coordinates</td>
+         <td>east</td>
+       </tr>
+       <tr>
+         <td>north</td>
+       </tr>
+       <tr>
+         <td>south</td>
+       </tr>
+       <tr>
+         <td>west</td>
+       </tr>
+       <tr>
+         <td rowspan="12">other-units</td>
+         <td>radian</td>
+       </tr>
+       <tr>
+         <td>degree</td>
+       </tr>
+       <tr>
+         <td>arc-minute</td>
+       </tr>
+       <tr>
+         <td>arc-second</td>
+       </tr>
+       <tr>
+         <td>karat</td>
+       </tr>
+       <tr>
+         <td>milligram-per-deciliter</td>
+       </tr>
+       <tr>
+         <td>millimole-per-liter</td>
+       </tr>
+       <tr>
+         <td>liter-per-kilometer</td>
+       </tr>
+       <tr>
+         <td>liter-per-100kilometers</td>
+       </tr>
+       <tr>
+         <td>mile-per-gallon</td>
+       </tr>
+       <tr>
+         <td>mile-per-gallon-imperial</td>
+       </tr>
+       <tr>
+         <td>lux</td>
+       </tr>
+     </table>
+    </emu-table>
+
     <emu-clause id="sec-deconstructpattern" aoid="DeconstructPattern">
       <h1>DeconstructPattern (pattern, placeables)</h1>
 
