Update the table spelling mistake

--- a/spec/unitformat.html
+++ b/spec/unitformat.html
@@ -361,7 +361,7 @@
          <td>kilohertz</td>
        </tr>
        <tr>
-         <td rowspan="8">weather</td>
+         <td rowspan="9">weather</td>
          <td>hectopascal</td>
        </tr>
        <tr>
@@ -386,10 +386,10 @@
          <td>fahrenheit</td>
        </tr>
        <tr>
-         <td rowspan="11">weather</td>
          <td>kelvin</td>
        </tr>
        <tr>
+         <td rowspan="10">digital</td>
          <td>terabyte</td>
        </tr>
        <tr>
